<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingTop="50dp"
    tools:context=".MainActivity">



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_envio_parametros"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/botones_inicio"
        android:text="@string/envio_parametros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_04"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/botones_inicio"
        android:text="@string/prueba_04"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_envio_parametros"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_recyclerview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/botones_inicio"
        android:text="@string/recyclerview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_04"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_recyclerview2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/botones_inicio"
        android:text="@string/recyclerview2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_recyclerview"/>

</androidx.constraintlayout.widget.ConstraintLayout>